--- a/botconfig.json
+++ b/botconfig.json
@@ -1,4 +1,4 @@
 {
-	"token": JSON.parse(ENV['secrettoken']),
+	"token": "NjQ5NjMwMTgyMDQyMzcwMDY5.Xd_lYg.Wy2gZpzDt8f5XS4SEWhhaq1y9bo",
 	"prefix": "."
 }
