--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "discord.js": "^11.5.1",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "quick.db": "^7.0.0-b22"
   },
   "devDependencies": {},
   "scripts": {
