--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Nejlepsi bot",
   "main": "index.js",
   "dependencies": {
-    "discord.js": "^11.5.1",
+    "discord.js": "^13.3.1",
     "fs": "0.0.1-security",
+    "mongoose": "^6.0.14",
+    "node": "^17.1.0",
     "node-opus": "^0.3.3",
     "opusscript": "0.0.7",
     "quick.db": "^7.0.0-b22",
