--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "dependencies": {
     "discord.js": "^13.3.1",
     "fs": "0.0.1-security",
-    "mongoose": "^6.0.14",
-    "node": "^16.13.0",
-    "node-opus": "^0.3.3",
-    "opusscript": "0.0.7"
+    "node": "^16.13.0"
   },
   "engines": {
     "node": "^16.13.0"
