--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "discord.js": "^13.3.1",
     "fs": "0.0.1-security",
+    "mongoose": "^6.7.3",
     "node": "^16.13.0"
   },
   "engines": {
     "node": "^16.13.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
