--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Nejlepsi bot",
   "main": "index.js",
   "dependencies": {
-    "discord.js": "^13.3.1",
+    "discord.js": "^14.12.1",
     "fs": "0.0.1-security",
-    "mongoose": "^6.7.3",
-    "node": "^16.13.0"
+    "mongoose": "^7.4.1",
+    "node": "^18.17.0",
+    "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": "^16.13.0"
+    "node": "^18.17.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
